Walk-In Customer booking Implementedgit add . - Error Checks pending

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -13,6 +13,7 @@
   --font-family-1: 'Roboto', sans-serif;
   --font-family-2: 'Amita', cursive;
   --font-family-3: 'MontSerrat', 'Quicksand';
+  --font-family-4: 'Platypi', 'sans-serif';
 
   --primary-color: #1A1A1A;
   --secondary-color: #f7f7f7;
