--- a/client/src/components/HallDescription/HallDescription.scss
+++ b/client/src/components/HallDescription/HallDescription.scss
@@ -8,6 +8,7 @@
   // Define styles for slider
   .slider__wrapper {
     width: 100%;
+    height: 30rem;
     position: relative;
     overflow: hidden;
     border-radius: 15px;
@@ -16,9 +17,12 @@
 
     .carousel-container {
       width: 100%;
-
+      height: 100%;
+      
       img{
         width: 100%;
+        height: 100%;
+        object-fit: cover;
       }
     }
 
