--- a/client/src/components/Packages/Packages.scss
+++ b/client/src/components/Packages/Packages.scss
@@ -63,6 +63,10 @@
         align-items: center;
         padding: 0 5rem 2rem;
 
+        .card {
+            margin-bottom: 2.5rem;
+        }
+
     }
 
     .packagecount__wrapper {
