--- a/client/src/components/Promotion/Promotion.scss
+++ b/client/src/components/Promotion/Promotion.scss
@@ -52,8 +52,8 @@
                     background: var(--orange-gradient);
                     border-radius: 999px;
 
-                    right: 5rem;
-                    top: -1rem;
+                    right: 10rem;
+                    top: -0.75rem;
                     z-index: 1;
                 }
 
@@ -93,17 +93,12 @@
                     color: #ff8000;
                 }
     
-                input {
+                .input {
                     width: 100%;
-                    height: 100%;
+                    color: #000000;
                     text-decoration: none;
                     border: none;
-                    color: #000000;
-                    padding: 7px;
-    
-                    &:focus {
-                        outline: none;
-                    }
+                    // padding: 7px;
                 }
     
                 .button {
