--- a/client/src/components/Stories/Stories.scss
+++ b/client/src/components/Stories/Stories.scss
@@ -69,6 +69,8 @@
                 width: 100%;
                 height: 100%;
 
+                cursor: not-allowed;
+
                 img {
                     object-fit: cover;
                     object-position: center;
@@ -97,7 +99,6 @@
                     transition: all 0.4s ease-in;
                     overflow: hidden;
                     z-index: 1;
-                    cursor: pointer;
 
                     &:hover {
                         opacity: 1;
@@ -148,9 +149,9 @@
                     .icon {
                         transition: all 0.3s ease-in-out;
 
-                        &:hover {
-                            color: rgb(92, 92, 236);
-                        }
+                        // &:hover {
+                        //     color: rgb(92, 92, 236);
+                        // }
                     }
                 }
             }
