added remarks in status update of vendor

--- a/client/src/components/OrderHistoryPage/OrderHistoryPage.scss
+++ b/client/src/components/OrderHistoryPage/OrderHistoryPage.scss
@@ -91,6 +91,12 @@
             background-color: #0056b3;
           }
         }
+        .booking-type-icon{
+          position: absolute;
+          right:0;
+          top:10px; 
+        }
+        
 
         .order-info {
           display: flex;
