--- a/client/src/components/SearchBar/SearchBar.scss
+++ b/client/src/components/SearchBar/SearchBar.scss
@@ -11,7 +11,7 @@
     padding-bottom: 5rem;
     user-select: none;
   
-    .main__wrapper {
+    .mainSearchBar__wrapper {
       width: 100%;
       margin: 0 5rem;
       border-radius: 1rem;
@@ -29,6 +29,8 @@
         letter-spacing: 1px;
         font-weight: 700;
         color: var(--orange-color);
+
+        margin-bottom: 0.5rem;
       }
   
       .description {
@@ -41,18 +43,26 @@
   
       .sub__wrapper_1 {
         display: flex;
+        flex-direction: row;
         flex-wrap: wrap;
         justify-content: center;
-        align-items: center;
+        align-items: flex-end;
         margin-bottom: 1.5rem;
+
+        @media (min-width: 1500px) {
+          justify-content: space-between;
+        }
   
         .wrapper {
-          width: 100%;
+          width: 90%;
           max-width: none;
-          margin: 0.5rem;
   
           @media (min-width: 768px) {
             max-width: 300px;
+          }
+
+          @media (max-width: 1500px) {
+            margin: 0.5rem;
           }
   
           p {
@@ -63,7 +73,6 @@
   
           .input {
             border: 1px solid #808080;
-            border-right: none;
             height: 2.5rem;
             width: 100%;
             cursor: pointer;
@@ -104,12 +113,12 @@
   
         .search__icon {
           margin: 1rem;
-          width: 100%;
+          width: auto;
           text-align: center;
   
-          @media (min-width: 768px) {
-            width: auto;
-            text-align: left;
+          @media (min-width: 768px) and (max-width: 1199px) {
+            width: 100%;
+            text-align: center;
           }
   
           button {
