--- a/client/src/components/SearchBar/SearchBar.scss
+++ b/client/src/components/SearchBar/SearchBar.scss
@@ -8,7 +8,7 @@
     display: flex;
     max-width: 100%;
     background: linear-gradient(to bottom, #1a1a1a 0%, #1a1a1a 50%, #f7f7f7 50%, #f7f7f7 100%);
-    padding-bottom: 5rem;
+    padding: 1rem 0 5rem 0;
     user-select: none;
   
     .mainSearchBar__wrapper {
