--- a/client/src/sub-components/Advertisement/Advertisement.scss
+++ b/client/src/sub-components/Advertisement/Advertisement.scss
@@ -15,6 +15,12 @@
         object-fit: cover;
         object-position: center center;
     }
+
+    @media only screen and (max-width: 768px) {
+        /* Your CSS styles for small devices here */
+        padding: 0 1rem 1rem 1rem;
+        margin-top: 0rem;
+      }
 }
 
 .dark-bg {
