--- a/client/src/components/Dashboard/Dashboard.scss
+++ b/client/src/components/Dashboard/Dashboard.scss
@@ -188,89 +188,25 @@
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     // width: 98%;
     // margin-left: 10px;
-    width: 80%;
-      float: right;
+    width: 100%;
+    //   float: right;
+    min-height: 100vh;
+    background-color: transparent;
+    
+    display: flex;
+    justify-content: center;
+    align-items: center;
 
-    h1 {
-        text-align: center;
-        margin-bottom: 20px;
-        font-size: 2rem;
-        font-weight: bold;
-        color: #333;
-    }
-
-    .analytics-container {
-        display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-        gap: 20px;
-    }
-
-    .analytics-item {
-        background-color: #f9f9f9;
-        padding: 20px;
-        border-radius: 8px;
-        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-        text-align: center;
-        transition: all 0.3s ease-in-out;
-
-        &:hover {
-            transform: translateY(-5px);
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
-        }
-
-        h2 {
-            margin-bottom: 10px;
-            font-weight: bold;
-            color: #333;
-        }
-
-        p {
-            font-size: 1.2rem;
-            font-weight: bold;
-            color: #555;
-        }
-    }
-
-    .charts {
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: space-between;
-
-        h2 {
-            margin-bottom: 10px;
-            font-weight: bold;
-            color: #333;
-        }
-    }
-
-    .chart-card {
-        margin-top: 20px;
-        background-color: #f5f5f5;
-        border-radius: 8px;
-        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-        padding: 20px;
-        width: 49%;
-        box-sizing: border-box;
-        position: relative;
-        overflow: hidden;
-
-        #analytics-curve {
-            width: 600px !important;
-            height: 400px !important;
-        }
-
-        canvas {
-            width: 100%;
-            max-width: 100%;
-            height: auto;
-        }
+    .wrapper {
+        width: 100%;
+        height: 100%;
 
         .analytics-container {
             display: grid;
             grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-            gap: 10px;
+            gap: 20px;
         }
-
+    
         .analytics-item {
             background-color: #f9f9f9;
             padding: 20px;
@@ -278,64 +214,141 @@
             box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
             text-align: center;
             transition: all 0.3s ease-in-out;
-
+    
             &:hover {
                 transform: translateY(-5px);
                 box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
             }
-
+    
             h2 {
                 margin-bottom: 10px;
                 font-weight: bold;
                 color: #333;
             }
-
+    
             p {
                 font-size: 1.2rem;
                 font-weight: bold;
                 color: #555;
             }
         }
-
-        .city-location {
-            background: #fff;
-            padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-            margin: 20px auto;
-            max-width: 800px;
-
+    
+        .charts {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: space-between;
+    
             h2 {
                 margin-bottom: 10px;
                 font-weight: bold;
                 color: #333;
             }
-
+        }
+    
+        .chart-card {
+            margin-top: 20px;
+            background-color: #f5f5f5;
+            border-radius: 8px;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            padding: 20px;
+            width: 49%;
+            box-sizing: border-box;
+            position: relative;
+            overflow: hidden;
+    
+            #analytics-curve {
+                width: 600px !important;
+                height: 400px !important;
+            }
+    
+            canvas {
+                width: 100%;
+                max-width: 100%;
+                height: auto;
+            }
+    
+            .analytics-container {
+                display: grid;
+                grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+                gap: 10px;
+            }
+    
             .analytics-item {
-                display: flex;
-                justify-content: space-between;
-                align-items: center;
-                margin-top: 15px;
-                padding: 10px 0;
-
-                .location-info {
-                    flex: 1;
-
-                    h2 {
-                        font-size: 1.2em;
-                        color: #666;
-                        margin: 0;
-                    }
+                background-color: #f9f9f9;
+                padding: 20px;
+                border-radius: 8px;
+                box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+                text-align: center;
+                transition: all 0.3s ease-in-out;
+    
+                &:hover {
+                    transform: translateY(-5px);
+                    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
                 }
-
-                .percentage {
-                    font-size: 1.5em;
+    
+                h2 {
+                    margin-bottom: 10px;
+                    font-weight: bold;
+                    color: #333;
+                }
+    
+                p {
+                    font-size: 1.2rem;
                     font-weight: bold;
                     color: #555;
                 }
             }
+    
+            .city-location {
+                background: #fff;
+                padding: 20px;
+                border-radius: 10px;
+                box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+                margin: 20px auto;
+                max-width: 800px;
+    
+                h2 {
+                    margin-bottom: 10px;
+                    font-weight: bold;
+                    color: #333;
+                }
+    
+                .analytics-item {
+                    display: flex;
+                    justify-content: space-between;
+                    align-items: center;
+                    margin-top: 15px;
+                    padding: 10px 0;
+    
+                    .location-info {
+                        flex: 1;
+    
+                        h2 {
+                            font-size: 1.2em;
+                            color: #666;
+                            margin: 0;
+                        }
+                    }
+    
+                    .percentage {
+                        font-size: 1.5em;
+                        font-weight: bold;
+                        color: #555;
+                    }
+                }
+            }
         }
     }
+
+    // h1 {
+    //     text-align: center;
+    //     margin-bottom: 20px;
+    //     font-size: 2rem;
+    //     font-weight: bold;
+    //     color: #333;
+    //     display: none;
+    // }
+
 }
 
 // Media queries for responsiveness
