--- a/client/src/components/Favorites/Favorites.scss
+++ b/client/src/components/Favorites/Favorites.scss
@@ -1,6 +1,8 @@
 .userFavorites__container {
-  width: 80%;
-  float: right;
+  width: 100%;
+  // float: right;
+  min-height: 100vh;
+  background-color: transparent;
   display: flex;
   flex-direction: column;
   align-items: center;
