--- a/client/src/components/HallForm/HallForm.scss
+++ b/client/src/components/HallForm/HallForm.scss
@@ -3,14 +3,12 @@
 .HallForm__container {
   background-color: #f5f5f5;
   height: auto;
-  width: 80%;
-  float: right;
-  border-radius: 25px;
+  width: 100%;
   display: flex;
   flex-direction: column;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
   padding: 3rem;
-  margin-bottom: 5rem;
+  margin-top: 1rem;
 
   @media (max-width: 767px) {
     width: 100%;
