--- a/client/src/components/MyCart/MyCart.scss
+++ b/client/src/components/MyCart/MyCart.scss
@@ -1,25 +1,22 @@
 /* MyCart.scss */
 
 .my-user-cart__container {
-  width: 80%;
-  margin: 30px auto;
+  width: 100%;
+  min-height: 100vh;
+  margin-top: 4rem;
   padding: 20px;
-  background-color: #f9f9f9;
+
+  background-color: transparent;
   border-radius: 8px;
   box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-   float:right;
-  .cart-header {
-    margin-bottom: 20px;
 
-    h2 {
-      color: #333;
-      font-size: 24px;
-      font-weight: bold;
-      margin-bottom: 20px;
-    }
-  }
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
 
   .cart-container {
+    width: 100%;
+    height: 100%;
 
     .cart-empty {
       text-align: center;
