--- a/client/src/components/Notifications/Notifications.scss
+++ b/client/src/components/Notifications/Notifications.scss
@@ -14,38 +14,49 @@ $font-family: 'Roboto', sans-serif;
 
 // Styles
 .notification-container {
-  width: 80%;
-  float: right;
+  width: 100%;
+  min-height: 100vh;
+  // float: right;
   margin: 0 auto;
   padding: 20px;
-  background-color: $background-color;
+  background-color: transparent;
   border-radius: $border-radius;
   box-shadow: $box-shadow;
   font-family: $font-family;
 
-  h1 {
-    color: $primary-color;
-    text-align: center;
-    margin-bottom: 20px;
-    font-size: 1.8rem;
-  }
+  display: flex;
+  justify-content: center;
+  align-items: center;
 
-  .clear-button {
-    display: block;
-    margin: 0 auto 20px;
-    padding: 10px 20px;
-    background-color: $primary-color;
-    color: #fff;
-    border: none;
-    border-radius: $border-radius;
-    cursor: pointer;
-    font-size: 1rem;
-    @include transition;
+  .wrapper {
+    width: 100%;
+    height: 100%;
 
-    &:hover {
-      background-color: $secondary-color;
+    h1 {
+      color: $primary-color;
+      text-align: center;
+      margin-bottom: 20px;
+      font-size: 1.8rem;
+    }
+  
+    .clear-button {
+      display: block;
+      margin: 0 auto 20px;
+      padding: 10px 20px;
+      background-color: $primary-color;
+      color: #fff;
+      border: none;
+      border-radius: $border-radius;
+      cursor: pointer;
+      font-size: 1rem;
+      @include transition;
+  
+      &:hover {
+        background-color: $secondary-color;
+      }
     }
   }
+
 }
 
 .notification__card {
