--- a/client/src/components/OrderHistoryPage/OrderHistoryPage.scss
+++ b/client/src/components/OrderHistoryPage/OrderHistoryPage.scss
@@ -2,27 +2,28 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 80%;
-  float: right;
- 
+  width: 100%;
+  // float: right;
+  min-height: 100vh;
+  background-color: transparent;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
 
   .order-history-panel {
-    width: 96%;
+    width: 100%;
+    height: 100%;
     max-width: 1200px;
     padding: 40px;
-    background-color: #fff;
+    background-color: transparent;
     border-radius: 10px;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
-    margin-top: 1.5%;
-    margin-bottom: 1.5%;
+    margin-top: 3rem;
+    margin-bottom: 1rem;
+
+    color: #333 !important;
     .order-history {
-      h2 {
-        color: #333;
-        font-size: 28px;
-        font-weight: bold;
-        margin-bottom: 30px;
-        text-align: center;
-      }
 
       .order-list {
         display: grid;
@@ -37,12 +38,12 @@
         padding: 35px;
         box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
         transition: box-shadow 0.3s, transform 0.3s;
-        min-width:350px;
+        min-width: 350px;
         &:hover {
           box-shadow: 0 0 30px rgba(0, 0, 0, 0.2);
           transform: translateY(-5px);
         }
-   
+
         .cnfrm-btn,
         .reject-btn {
           position: absolute;
@@ -78,7 +79,7 @@
           position: absolute;
           top: 5px;
           right: 20px;
-          
+
           background-color: #007bff;
           color: #fff;
           border: none;
@@ -91,12 +92,11 @@
             background-color: #0056b3;
           }
         }
-        .booking-type-icon{
+        .booking-type-icon {
           position: absolute;
-          right:0;
-          top:10px; 
+          right: 0;
+          top: 10px;
         }
-        
 
         .order-info {
           display: flex;
@@ -104,12 +104,12 @@
           gap: 20px;
           margin-top: 15px;
           align-items: flex-start;
-          .date{
+          .date {
             background-color: #ffffcc; /* Light shade of yellow */
-           border-radius: 4px; /* Rounded corners */
+            border-radius: 4px; /* Rounded corners */
             padding: 2px 4px; /* Add some padding */
           }
-          .time{
+          .time {
             background-color: #ffffcc; /* Light shade of yellow */
             border-radius: 4px; /* Rounded corners */
             padding: 2px 4px; /* Add some padding */
