--- a/client/src/components/Promotion/Promotion.scss
+++ b/client/src/components/Promotion/Promotion.scss
@@ -172,59 +172,79 @@
 
   // Media Queries for Mobile Devices
   @media screen and (max-width: 768px) {
-    .app__container {
-      flex-direction: column;
-      margin-top: 4rem;
 
-      .sub__wrapper_1 {
-        margin: 2rem;
+      .main__container {
+        min-height: auto;
+      }
 
-        .title__wrapper {
-          .overlay_circle {
-            height: 2.5rem;
-            width: 2.5rem;
-            right: 7rem;
-            top: -0.5rem;
-          }
-
-          .heading_title {
-            font-size: 2rem;
-          }
-        }
-
-        .search__wrapper {
-          flex-direction: row;
-          height: auto;
-          margin-bottom: 1rem;
-
-          .input {
-            margin-top: 0.5rem;
-            padding: 0.5rem;
-          }
-
-          .button {
-            margin-top: 0.5rem;
-          }
-        }
-
-        .views__wrapper {
+        .app__container {
+          width: 100%;
           flex-direction: column;
-          align-items: flex-start;
+          // margin-top: 4rem;
+    
+          .sub__wrapper_1 {
+            width: 100%;
+            padding: 3rem 1rem 0 1rem;
+            margin: 2rem;
+    
+            .title__wrapper {
+              .overlay_circle {
+                height: 2.5rem;
+                width: 2.5rem;
+                right: 4rem;
+                top: -0.5rem;
+              }
+    
+              .heading_title {
+                font-size: 2rem;
+              }
+            }
+    
+            .search__wrapper {
+              flex-direction: row;
+              height: auto;
+              margin-bottom: 1rem;
+    
+              .input {
+                margin-top: 0.5rem;
+                padding: 0.5rem;
+              }
+    
+              .button {
+                margin-top: 0.5rem;
+              }
+            }
+    
+            .views__wrapper {
+              flex-direction: row;
+              align-items: flex-start;
+    
+              .item {
+                margin-bottom: 1rem;
+              }
+            }
+          }
+    
+          .sub__wrapper_2 {
+            display: none;
 
-          .item {
-            margin-bottom: 1rem;
+            // width: 100%;
+            // margin-bottom: 2rem;
+    
+            // .image-container {
+            //   height: 300px;
+            //   width: 80%;
+            //   img {
+    
+            //   }
+            // }
           }
         }
-      }
+      
+        .navigation__dots {
+          margin-top: 1rem;
+        }
 
-      .sub__wrapper_2 {
-        display: none;
-      }
-    }
-
-    .navigation__dots {
-      margin-top: 1rem;
-    }
   }
 
   @media only screen and (min-width: 768px) and (max-width: 1199px) {
