--- a/client/src/components/UserProfile/ProfileForm.scss
+++ b/client/src/components/UserProfile/ProfileForm.scss
@@ -315,15 +315,15 @@
 .UserProfile__container {
   background-color: #f5f5f5;
   height: auto;
-  width: 80%;
+  width: 100%;
   border-radius: 25px;
   display: flex;
   flex-direction: column;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
   padding: 3rem;
-  float: right;
-  margin-bottom: 5rem;
-  margin-left: 1rem;
+  background-color: transparent;
+
+  margin-top: 2rem;
 
   hr {
     padding: 1px;
