EC-33 Company Policies Updated
Privacy Policy, Cancellation Policy, Terms and Conditions, Contact Form Updated!

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -29,6 +29,7 @@
   --orange-color: #ff8000;
   --blue-color: #007bff;
   --blue-hover-color: #0056b3;
+  --link-color: #0000EE;
   --light-blue-color: rgba(#007bff, 0.5);
   --red-color: #ff0000;
 
