--- a/client/src/pages/UserProfilePage/ProfilePage.scss
+++ b/client/src/pages/UserProfilePage/ProfilePage.scss
@@ -25,6 +25,12 @@
 
     .list__wrapper {
       width: 100%;
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+      justify-content: center;
+      overflow: hidden;
+      gap: 1rem;
 
       .logo {
         height: 2rem;
@@ -49,9 +55,9 @@
 
     .divider {
         width: 100%;
-        height: 1px;
+        height: 2px;
         background-color: #b3b3b3;
-        margin: 0.5rem 0;
+        // margin: 0.5rem 0;
       }
   }
 
