--- a/client/src/components/HomePage/Stories/Stories.scss
+++ b/client/src/components/HomePage/Stories/Stories.scss
@@ -1,229 +1,223 @@
 * {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-  }
-  
-  .storiesComponent__container {
-    min-height: 200vh;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
+.storiesComponent__container {
+  width: 100%;
+  background-color: var(--secondary-color);
+  background-image: url('../../../assets/gallery-bg.jpg');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+  z-index: 0;
+  overflow: hidden;
+  position: relative;
+
+  &::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
     width: 100%;
-    background-color: var(--secondary-color);
-    background-image: url('../../../assets/gallery-bg.jpg');
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-attachment: fixed;
-    z-index: 0;
-    overflow: hidden;
+    background-color: rgba(0, 0, 0, 0.5);
+  }
+
+  @media (max-width: 768px) {
+    height: auto;
+  }
+
+  .stories__wrapper {
+    z-index: 2 !important;
+    width: 100%;
+    min-height: 100%;
     position: relative;
-    
-    &::before {
-      content: "";
-      position: absolute;
-      top: 0;
-      left: 0;
-      min-height: 100%;
-      width: 100%;
-      background-color: rgba(0, 0, 0, 0.5);
-    }
+    color: #ffffff;
+    padding: 3rem 5rem;
 
     @media (max-width: 768px) {
-        height: auto;
-      }
-  
-  
-    .stories__wrapper {
-      z-index: 2 !important;
+      padding: 1rem;
+    }
+
+    .sub_title {
       width: 100%;
-      height: 100%;
-      position: absolute;
-      color: #ffffff;
-      padding: 3rem 5rem;
-  
+      text-transform: uppercase;
+      text-decoration: none;
+      font-size: 20px;
+      font-weight: 700;
+      letter-spacing: 1px;
+      color: var(--orange-color);
+    }
+
+    .title {
+      width: 100%;
+      text-transform: capitalize;
+      text-decoration: none;
+      font-size: 34px;
+      font-weight: 800;
+      margin-bottom: 3rem;
+    }
+
+    .gallery__wrapper {
+      width: 100%;
+      display: grid;
+      grid-template-columns: repeat(6, 1fr);
+      grid-template-rows: repeat(6, minmax(15vh, auto));
+      grid-gap: 12px;
+
       @media (max-width: 768px) {
-        padding: 1rem;
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(auto-fit, minmax(150px, 1fr));
+        grid-gap: 8px;
       }
-  
-      .sub_title {
-        width: 100%;
-        text-transform: uppercase;
-        text-decoration: none;
-        font-size: 20px;
-        font-weight: 700;
-        letter-spacing: 1px;
-        color: var(--orange-color);
-      }
-  
-      .title {
-        width: 100%;
-        text-transform: capitalize;
-        text-decoration: none;
-        font-size: 34px;
-        font-weight: 800;
-        margin-bottom: 3rem;
-      }
-  
-      .gallery__wrapper {
+
+      .gallery_item {
+        position: relative;
         width: 100%;
         height: 100%;
-        display: grid;
-        grid-template-columns: repeat(10, 1fr);
-        grid-template-rows: repeat(10, 15vh);
-        grid-gap: 12px;
-  
-        @media (max-width: 768px) {
-          grid-template-columns: repeat(2, 1fr);
-          grid-template-rows: repeat(auto-fit, minmax(150px, 1fr));
-          grid-gap: 8px;
-        }
-  
-        .gallery_item {
-          position: relative;
+
+        img {
+          object-fit: cover;
+          object-position: center;
           width: 100%;
           height: 100%;
-  
-          img {
-            object-fit: cover;
-            object-position: center;
-            width: 100%;
-            height: 100%;
-            display: inline-block;
-            border-radius: 8px;
+          display: inline-block;
+          border-radius: 8px;
+        }
+
+        .content {
+          position: absolute;
+          top: 0;
+          left: 0;
+          height: 100%;
+          width: 100%;
+          padding: 1rem;
+          display: flex;
+          flex-direction: column;
+          justify-content: center;
+          align-items: center;
+          background-color: rgba(0, 0, 0, 0.4);
+          opacity: 0;
+          transition: all 0.4s ease-in;
+          overflow: hidden;
+          z-index: 1;
+          cursor: not-allowed;
+
+          &:hover {
+            opacity: 1;
           }
-  
-          .content {
+
+          &::after {
+            content: "";
             position: absolute;
-            top: 0;
             left: 0;
+            top: 0;
             height: 100%;
             width: 100%;
-            padding: 1rem;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            background-color: rgba(0, 0, 0, 0.4);
-            opacity: 0;
-            transition: all 0.4s ease-in;
-            overflow: hidden;
-            z-index: 1;
-            // cursor: pointer;
-            cursor: not-allowed;
-  
+            background-color: rgba(0, 0, 0, 0.6);
+            z-index: -1;
+            transform: scaleY(0);
+            transform-origin: bottom center;
+            transition: transform 500ms cubic-bezier(0.86, 0, 0.07, 1);
+          }
+
+          &:hover::after {
+            transform: scaleY(1);
+          }
+
+          .story_title {
+            text-transform: capitalize;
+            font-size: 18px;
+            font-weight: 600;
+            margin-bottom: 1rem;
+            color: var(--orange-color);
+            transition: all 0.3s ease-in;
+
             &:hover {
-              opacity: 1;
-            }
-  
-            &::after {
-              content: "";
-              position: absolute;
-              left: 0;
-              top: 0;
-              height: 100%;
-              width: 100%;
-              background-color: rgba(0, 0, 0, 0.6);
-              z-index: -1;
-              transform: scaleY(0);
-              transform-origin: bottom center;
-              transition: transform 500ms cubic-bezier(0.86, 0, 0.07, 1);
-              transition-timing-function: cubic-bezier(0.86, 0, 0.07, 1);
-            }
-  
-            &:hover::after {
-              transform: scaleY(1);
-              transform-origin: bottom center;
-            }
-  
-            .story_title {
-              text-transform: capitalize;
-              font-size: 18px;
-              font-weight: 600;
-              margin-bottom: 1rem;
-              color: var(--orange-color);
-              transition: all 0.3s ease-in;
-  
-              &:hover {
-                color: var(--orange-hover-color);
-              }
-            }
-  
-            .story_desc {
-              text-transform: initial;
-              font-size: 16px;
-              font-weight: normal;
-              text-align: center;
-              margin-bottom: 1rem;
-            }
-  
-            .icon {
-              transition: all 0.3s ease-in-out;
-  
-              &:hover {
-                color: rgb(92, 92, 236);
-              }
+              color: var(--orange-hover-color);
             }
           }
-        }
-  
-        .gallery_item_1 {
-grid-column: auto / span 3;
-          grid-row: auto / span 5;
-  
-          @media (max-width: 768px) {
-            grid-column: auto / span 2;
-            grid-row: auto / span 1;
+
+          .story_desc {
+            text-transform: initial;
+            font-size: 16px;
+            font-weight: normal;
+            text-align: center;
+            margin-bottom: 1rem;
           }
-        }
-  
-        .gallery_item_3 {
-          grid-column: auto / span 3;
-          grid-row: auto / span 5;
-  
-          @media (max-width: 768px) {
-            grid-column: auto / span 2;
-            grid-row: auto / span 1;
-          }
-        }
-  
-        .gallery_item_2 {
-          grid-column: auto / span 4;
-          grid-row: auto / span 6;
-  
-          @media (max-width: 768px) {
-            grid-column: auto / span 2;
-            grid-row: auto / span 1;
-          }
-        }
-  
-        .gallery_item_4 {
-          grid-column: auto / span 3;
-          grid-row: auto / span 5;
-  
-          @media (max-width: 768px) {
-            grid-column: auto / span 2;
-            grid-row: auto / span 1;
-          }
-        }
-  
-        .gallery_item_5 {
-          grid-column: auto / span 4;
-          grid-row: auto / span 4;
-  
-          @media (max-width: 768px) {
-            grid-column: auto / span 2;
-            grid-row: auto / span 1;
-          }
-        }
-  
-        .gallery_item_6 {
-          grid-column: auto / span 3;
-          grid-row: 6 / span 5;
-  
-          @media (max-width: 768px) {
-            grid-column: auto / span 2;
-            grid-row: auto / span 1;
+
+          .icon {
+            transition: all 0.3s ease-in-out;
+
+            &:hover {
+              color: rgb(92, 92, 236);
+            }
           }
         }
       }
+
+      .gallery_item_1 {
+        grid-column: span 3;
+        grid-row: span 3;
+
+        @media (max-width: 768px) {
+          grid-column: span 2;
+          grid-row: span 1;
+        }
+      }
+
+      .gallery_item_2 {
+        grid-column: span 3;
+        grid-row: span 3;
+
+        @media (max-width: 768px) {
+          grid-column: span 2;
+          grid-row: span 1;
+        }
+      }
+
+      .gallery_item_3 {
+        grid-column: span 2;
+        grid-row: span 2;
+
+        @media (max-width: 768px) {
+          grid-column: span 2;
+          grid-row: span 1;
+        }
+      }
+
+      .gallery_item_4 {
+        grid-column: span 2;
+        grid-row: span 2;
+
+        @media (max-width: 768px) {
+          grid-column: span 2;
+          grid-row: span 1;
+        }
+      }
+
+      .gallery_item_5 {
+        grid-column: span 2;
+        grid-row: span 2;
+
+        @media (max-width: 768px) {
+          grid-column: span 2;
+          grid-row: span 1;
+        }
+      }
+
+      // .gallery_item_6 {
+      //   grid-column: span 2;
+      //   grid-row: span 2;
+
+      //   @media (max-width: 768px) {
+      //     grid-column: span 2;
+      //     grid-row: span 1;
+      //   }
+      // }
     }
   }
+}
