EC-42 Booking History in User Panel re-designed
New functionalities have been included and a versatile design is created to display the booking history. Booking confirmation and rejection process is under development.

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -33,6 +33,7 @@
   --link-color: #0000EE;
   --light-blue-color: rgba(#007bff, 0.5);
   --red-color: #ff0000;
+  --pink-color: #ff6e7f;
 
   --primary-text-color-whiteBg: #d3d3d3;
   --secondary-text-color-whiteBg: #a9a9a9;
