EC-42 Booking Confirmation Dialog - Booking History
Navigation enabled among various forms in booking confirmation dialog.
Users can now edit their booking details only if the status is pending.
Booking slot availability check added - full implementation still
pending.

--- a/client/src/components/UserProfilePage/BookingDetailsDialog/BookingDetailsDialog.scss
+++ b/client/src/components/UserProfilePage/BookingDetailsDialog/BookingDetailsDialog.scss
@@ -57,14 +57,14 @@
         color: var(--white-color);
         margin-bottom: 2rem !important;
       }
-      
+
       .name p {
         display: block; /* Change from flex to block */
         overflow: hidden;
         white-space: normal; /* Allow text to wrap */
         word-break: break-word; /* Optional: Ensure long words break correctly */
       }
-      
+
       .name span {
         font-size: 16px;
       }
@@ -118,11 +118,18 @@
       align-items: center;
       justify-content: center;
 
+      .container-column-center {
+        display: flex !important;
+        flex-direction: column !important;
+        align-items: center !important;
+        justify-content: center !important;
+      }
+      
       .container {
         width: 100%;
         padding: 0 1rem;
         margin: 1.5rem 0;
-
+        
         .inputField__wrapper {
           width: 100%;
           display: flex;
@@ -227,6 +234,22 @@
               text-decoration: none;
               font-weight: 500;
             }
+          }
+        }
+
+        .dateTimePicker {
+          width: 100%;
+          display: flex;
+          flex-direction: row;
+          justify-content: center;
+          align-items: center;
+          gap: 0.5rem;
+
+          margin: 0.5rem;
+
+          .icon {
+            color: var(--blue-color);
+            cursor: pointer;
           }
         }
 
@@ -361,6 +384,15 @@
           }
         }
 
+        .bookingStatusMsg {
+          width: 100%;
+          
+          .alert {
+            width: 100%;
+            margin: 0.5rem 0;
+          }
+        }
+
         .half-width {
           width: 50%;
           padding-right: 1.5rem;
@@ -368,19 +400,18 @@
       }
 
       .disabledInput__wrapper {
-       
-       .inputField__wrapper, .inputFields__wrapper {
+        .inputField__wrapper,
+        .inputFields__wrapper {
           .input__wrapper {
-
             // for disabled input
-            border: 1.5px solid var(--gray-border-color);
-            background-color: rgba($color: #000000, $alpha: 0.1);
-    
-            .input {
+            border: 1.5px solid var(--gray-border-color) !important;
+            background-color: rgba($color: #000000, $alpha: 0.1) !important;
+
+            .input, .selectInput {
               color: #d9d9d9 !important;
             }
           }
-       }
+        }
       }
 
       .lineSeparator {
@@ -454,7 +485,7 @@
             font-weight: 400;
             text-transform: capitalize;
             text-decoration: none;
-
+            text-wrap: nowrap;
             margin-right: 0.5rem;
           }
 
@@ -499,7 +530,7 @@
             background-color: #007bff; /* Blue */
             color: #ffffff; /* White text for contrast */
             border: 1.5px solid #007bff;
-          
+
             &:hover {
               background-color: #0056b3; /* Darker blue on hover */
             }
@@ -509,12 +540,11 @@
             background-color: #28a745; /* Green */
             color: #ffffff; /* White text for contrast */
             border: 1.5px solid #28a745;
-          
+
             &:hover {
               background-color: #218838; /* Darker green on hover */
             }
-          }          
-          
+          }
         }
       }
     }
