--- a/client/src/components/UserProfilePage/BookingDetailsDialog/BookingDetailsDialog.scss
+++ b/client/src/components/UserProfilePage/BookingDetailsDialog/BookingDetailsDialog.scss
@@ -36,8 +36,17 @@
 
       img {
         width: 75%;
-        height: 100%;
+        height: 10rem;
         border-radius: 1rem;
+      }
+    }
+
+    .profilePic {
+      width: 30%;
+
+      img{
+        width: 70%;
+        border-radius: 999px !important;
       }
     }
 
